fixed minor z-index bug with movieCards

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,6 @@
 .cardWrapper{
     margin: auto;
+    background-color: white;
     color:#464646;
     height: 16.5rem;
     width: 18.4rem;
@@ -7,6 +8,7 @@
 }
 
 .cardWrapper:hover{
+    z-index: 5;
     box-shadow: 0px 2px 4px rgba(59, 69, 123, 0.2), 0px 4px 8px rgba(92, 107, 192, 0.2);
     border-radius: 6px;
 }
@@ -16,10 +18,6 @@
     height: 9.7rem;
     padding: 0px;
     margin: 0px;
-}
-
-.itemImageContainer:hover{
-    z-index: 5;
 }
 
 .itemImageContainer >img{
